# Blliards

./: README  TODO  apache-config  make-release.sh  upload.sh
AI/: AI.cpp  AI.d  AI.h  Makefile  config.mk
FastFiz/: .cvsignore  AIBase.cpp  AIBase.d  AIBase.h  AUTHORS  FFTest  FastFiz.cpp  FastFiz.d  FastFiz.h  FastFizTest.cc  LogFile.cpp  LogFile.d  LogFile.h  Makefile  Noise.cpp  Noise.d  Rules.cpp  Rules.d  Rules.h  Stopwatch.cpp  Stopwatch.d  Stopwatch.h  config.mk  mainpage.h
FastFiz/doc/: Doxyfile  Makefile
FastFiz/perl/: FastFiz_perl.i  FastFiz_perl_wrap.cxx  FastFiz_perl_wrap.d  (+6 more)
client/: Agent.cpp  Agent.d  Agent.h  Makefile  client  client.conf  client.cpp  client.d  config.mk  exp-host.list  run-experiment.sh
database/: Makefile  html.tmpl  init-db.sql  makedb.sql  pool-database.odt  pool-schema.sql  postgresql_autodoc  xml.tmpl
example/: Makefile  example  example.cpp  example.d
libconfig-1.3/: ChangeLog  Makefile  Makefile.am  Makefile.in  ac_config.h  ac_config.h.in  config.status  configure  configure.ac  libconfig++.la  libconfig++.pc  libconfig.c  libconfig.h++  libconfig.la  libconfig.pc  libconfig.spec  libconfig___la-grammar.lo  libconfig___la-libconfig.lo  libconfig___la-libconfigcpp.lo  libconfig___la-scanner.lo  libconfig_la-grammar.lo  libconfig_la-libconfig.lo  libconfig_la-scanner.lo  libconfigcpp.c++  libtool  scanner.c  scanner.l  test.cfg  wincompat.h
libconfig-1.3/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanner.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanner.Plo
libconfig-1.3/.libs/: libconfig++.lai  libconfig++.so.6.0.0  libconfig.lai  libconfig.so.6.0.0
libconfig-1.3/debian/: changelog  control  libconfigduo2.postinst  shlibs
libconfig-1.3/doc/: Makefile  libconfig.info  libconfig.texi
libconfig-1.3/samples/: Makefile
libconfig-1.3/samples/c/: Makefile  sample1  sample2  sample3  stub
libconfig-1.3/samples/c++/: Makefile  sample1  sample2  sample3  stubcpp  stubcpp.cpp
libconfig-1.3/samples/c++/.deps/: sample1.Po  sample2.Po  sample3.Po  stubcpp.Po
libconfig-1.3/samples/c++/.libs/: sample1  sample2  sample3  stubcpp
libconfig-1.3/samples/c/.deps/: sample1.Po  sample2.Po  sample3.Po  stub.Po
libconfig-1.3/samples/c/.libs/: sample1  sample2  sample3  stub
randomAI/: AI.cpp  AI.h
www/: .cvsignore  FastFiz  agent.pl  api.html  api.pl  ballimg.pl  database.html  game.pl  index.html  logfile.pl  login.pl  match.pl  matchcsv.pl  matchcsv2.pl  noise.pl  pool.css  pool.js  shot.pl  state.pl  tournament.pl  upload.pl  user.pl  www-doc.html
(+354 files in other folders)
